<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_multichoise"
        android:title="@string/multichoise"
        android:icon="@drawable/ic_action_multichoise"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/action_offline_mode"
        android:title="@string/prompt_offline_mode"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_online_mode"
        android:title="@string/prompt_online_mode"
        android:visible="false"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_logout"
        app:showAsAction="never"
        android:title="@string/logout"/>
</menu>