<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- SwipeRefresh for refreshing on error and progress indication-->
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>

    <com.afterlogic.aurora.drive._unrefactored.presentation.ui.common.views.DisablableViewPager
        android:id="@+id/types_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/error"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/prompt_error_occurred"
        android:gravity="center_horizontal"
        style="@style/RootLayout"
        />

    <View
        android:id="@+id/fab_collapser"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"/>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/add_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:fab_expandDirection="up"
        app:fab_addButtonSize="normal"
        app:fab_labelStyle="@style/fab_labels_style"
        style="@style/FabMenuButton"
        >
        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/create_folder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_size="mini"
            app:fab_title="@string/prompt_create_folder"
            app:fab_icon="@drawable/ic_create_new_folder"
            style="@style/FabButton"
            />
        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/upload_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_size="mini"
            app:fab_title="@string/prompt_upload_file"
            app:fab_icon="@drawable/ic_cloud_upload"
            style="@style/FabButton"
            />
    </com.getbase.floatingactionbutton.FloatingActionsMenu>
</FrameLayout>
