<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="com.afterlogic.aurora.drive.presentation.modules.login.viewModel.LoginViewModel"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_height="match_parent" android:fitsSystemWindows="true"
        android:layout_width="match_parent">

        <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
                                                    android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                />

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ScrollView
                android:id="@+id/login_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                style="@style/RootLayout">

                <RelativeLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/domain_wrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <AutoCompleteTextView
                            android:id="@+id/domain"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_domain"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:enabled="@{!viewModel.isInProgress}"
                            bind:bindableText="@{viewModel.host}"
                            bind:error="@{viewModel.hostError}"
                            tools:text="http://aurora.com"
                            tools:hint="@null"/>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/email_wrapper"
                        android:layout_below="@+id/domain_wrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <AutoCompleteTextView
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:enabled="@{!viewModel.isInProgress}"
                            bind:bindableText="@{viewModel.login}"
                            bind:error="@{viewModel.loginError}"
                            tools:text="mail@mail.ru"
                            tools:hint="@null"/>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/pass_wraper"
                        android:layout_below="@id/email_wrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password"
                            android:imeActionId="@+id/login"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:enabled="@{!viewModel.isInProgress}"
                            bind:bindableText="@{viewModel.password}"
                            bind:error="@{viewModel.passwordError}"
                            tools:text="Kekelme"
                            tools:hint="@null"/>

                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/email_sign_in_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/pass_wraper"
                        android:layout_marginTop="16dp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:text='@{viewModel.isInProgress ? "" : @string/action_sign_in}'
                        android:onClick="@{() -> viewModel.onLogin()}"
                        android:enabled="@{!viewModel.isInProgress}"
                        tools:text="@string/action_sign_in"
                        style="?android:textAppearanceSmall"/>

                    <ProgressBar
                        android:id="@+id/login_progress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_alignTop="@id/email_sign_in_button"
                        android:layout_alignBottom="@id/email_sign_in_button"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:visibility="@{viewModel.isInProgress ? View.VISIBLE : View.GONE}"/>

                </RelativeLayout>
            </ScrollView>
        </LinearLayout>

        <include layout="@layout/view_compat_appbar_shadow"/>

    </android.support.design.widget.CoordinatorLayout>
</layout>
