<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <import type="com.afterlogic.aurora.drive.presentation.modules.main.v2.viewModel.MainViewModel"/>


        <variable
            name="vm"
            type="MainViewModel"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>

            <android.support.design.widget.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="bottom"
                app:pager="@{viewpager}"
                android:visibility="@{vm.fileTypesLocked || vm.fileTypes.size() == 0 || vm.multiChoiceMode ? View.GONE : View.VISIBLE}"
                app:layout_scrollFlags="scroll|enterAlways"/>

        </android.support.design.widget.AppBarLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:text="@string/prompt_error_occurred"
            android:padding="32dp"
            android:gravity="center_horizontal"
            android:visibility="@{vm.viewModelState.isError() ? View.VISIBLE : View.GONE}"/>

        <!-- SwipeRefresh for refreshing on error and progress indication-->
        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:onRefresh="@{() -> vm.onRefresh()}"
            app:refreshing="@{vm.viewModelState.isLoading()}"
            app:colorSchemeResources="@{@intArray/swipe_refresh_color_scheme}">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="20dp"/>
            </ScrollView>
        </android.support.v4.widget.SwipeRefreshLayout>

        <com.afterlogic.aurora.drive.presentation.common.components.view.DisablableViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:main_fileTypesAdapter="@{vm.fileTypes}"
            app:currentItem="@{vm.currentFileTypePosition}"
            app:swipeEnabled="@{!(vm.fileTypesLocked || vm.multiChoiceMode)}"/>

        <View
            android:id="@+id/fab_collapser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>


        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:id="@+id/add_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:visibility="@{vm.multiChoiceMode || !vm.viewModelState.isContent() ? View.GONE : View.VISIBLE}"
            app:fab_expandDirection="up"
            app:fab_addButtonSize="normal"
            app:fab_labelStyle="@style/fab_labels_style"
            style="@style/FabMenuButton"
            tools:ignore="RtlHardcoded">

            <com.afterlogic.aurora.drive.presentation.common.view.FloatingActionButton
                android:id="@+id/create_folder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> vm.onCreateFolderClick()}"
                app:autoCollapseMenu="@{true}"
                app:fab_size="mini"
                app:fab_title="@string/prompt_create_folder"
                app:fab_icon="@drawable/ic_create_new_folder"
                style="@style/FabButton"
                />

            <com.afterlogic.aurora.drive.presentation.common.view.FloatingActionButton
                android:id="@+id/upload_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> vm.onUploadFileClick()}"
                app:autoCollapseMenu="@{true}"
                app:fab_size="mini"
                app:fab_title="@string/prompt_upload_file"
                app:fab_icon="@drawable/ic_cloud_upload"
                style="@style/FabButton"
                />
        </com.getbase.floatingactionbutton.FloatingActionsMenu>

    </android.support.design.widget.CoordinatorLayout>
</layout>
